--- a/style.css
+++ b/style.css
@@ -9,11 +9,15 @@ body {
 }
 
 /*NAVBAR*/
+
 .navbar {
   background-color: #295505;
-  position: fixed; /* Set the navbar to fixed position */
-  top: 0; /* Position the navbar at the top of the page */
-  width: 100%; /* Full width */
+  position: fixed;
+  /* Set the navbar to fixed position */
+  top: 0;
+  /* Position the navbar at the top of the page */
+  width: 100%;
+  /* Full width */
   display: flex;
   justify-content: center;
 }
@@ -33,11 +37,14 @@ body {
 }
 
 /*JUMBOTRON*/
-.jumbotron {
-  height: 100vh; /*height to 100% of view height*/
-  background: #a4d531; /*background color to blue*/
-  margin-bottom: 0; /*no bottom margin*/
 
+.jumbotron {
+  height: auto;
+  /* height: 100vh; height to 100% of view height */
+  background: #a4d531;
+  /*background color to blue*/
+  margin-bottom: 0;
+  /*no bottom margin*/
   display: flex;
   flex-direction: column;
 }
@@ -64,6 +71,7 @@ body {
 }
 
 /*SOCIAL LINKS*/
+
 .ul-social {
   text-align: center;
   padding-left: 0;
@@ -81,6 +89,7 @@ body {
 }
 
 /*ARROW LINK*/
+
 #down-arrow {
   /*position: absolute;
   width: 100%;*/
@@ -94,6 +103,7 @@ body {
 }
 
 /*CONTENT*/
+
 .container {
   /*sets up flexbox*/
   display: flex;
@@ -129,9 +139,9 @@ body {
 }
 
 .box-shadow {
-  -webkit-box-shadow: 0px 0px 1px 0px rgba(0,0,0,0.75);
-  -moz-box-shadow: 0px 0px 1px 0px rgba(0,0,0,0.75);
-  box-shadow: 0px 0px 1px 0px rgba(0,0,0,0.75);
+  -webkit-box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.75);
 }
 
 h2 {
@@ -148,11 +158,12 @@ h2 {
 }
 
 /*EDUCATION*/
+
 .card {
   display: flex;
   flex-direction: column;
   background-color: white;
-  border: 1px solid rgba(0,0,0,.125);
+  border: 1px solid rgba(0, 0, 0, .125);
   border-radius: .25rem;
   margin-bottom: 30px;
 }
@@ -160,7 +171,7 @@ h2 {
 .card-header {
   padding: .75rem 1.25rem;
   background-color: white;
-  border-bottom: 1px solid rgba(0,0,0,.075);
+  border-bottom: 1px solid rgba(0, 0, 0, .075);
   border-top-left-radius: .25rem;
   border-top-right-radius: .25rem;
 }
@@ -182,14 +193,15 @@ h4 {
 }
 
 /*PROJECTS*/
+
 .project-card {
   display: flex;
   flex-direction: row;
   background-color: white;
-  border: 1px solid rgba(0,0,0,.125);
+  border: 1px solid rgba(0, 0, 0, .125);
   border-radius: 5px;
   margin-bottom: 30px;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.08), 0 3px 6px rgba(0,0,0,0.15);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.08), 0 3px 6px rgba(0, 0, 0, 0.15);
 }
 
 .project-image {
@@ -205,17 +217,17 @@ h4 {
 .project-content {
   flex: 1 1 auto;
   padding: 1.25rem;
-
   display: flex;
   justify-content: center;
   flex-direction: column;
 }
 
-.content-color{
+.content-color {
   color: grey;
 }
 
 /*SKILLS*/
+
 .ul-skills {
   text-align: center;
   padding-left: 0;
@@ -233,6 +245,7 @@ h4 {
 }
 
 /*CONTACT*/
+
 .blue {
   background: #a4d531;
   text-align: center;
@@ -270,7 +283,7 @@ h4 {
   border: none;
   color: #a4d531;
   font-weight: 1000;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   -webkit-transition: .5s ease all;
   transition: .5s ease all;
 }
@@ -294,6 +307,7 @@ h4 {
 }
 
 /*Image*/
+
 .center {
   display: block;
   margin-left: auto;
@@ -306,7 +320,23 @@ h4 {
 #fixedbutton {
   position: fixed;
   bottom: 50px;
-  right: 10px; 
+  right: 10px;
   color: #295505;
   display: inline-block;
+}
+
+@media screen and (max-width: 600px) {
+  .jumbotron-text {
+    padding-top: 2rem;
+  }
+  h1 {
+    font-size: 1rem;
+  }
+  p {
+    font-size: 1rem;
+  }
+
+  .navbar a{
+    display: block;
+  }
 }
