--- a/style.css
+++ b/style.css
@@ -1,312 +1,397 @@
 body {
-  font-family: 'Carter One', sans-serif;
-  background: rgba(242, 242, 242, .6);
-  margin: 0;
+    font-family: 'Carter One', sans-serif;
+    background: rgba(242, 242, 242, .6);
+    margin: 0;
 }
 
 * {
-  box-sizing: border-box
+    box-sizing: border-box
 }
 
+
 /*NAVBAR*/
+
 .navbar {
-  background-color: #295505;
-  position: fixed; /* Set the navbar to fixed position */
-  top: 0; /* Position the navbar at the top of the page */
-  width: 100%; /* Full width */
-  display: flex;
-  justify-content: center;
+    background-color: #295505;
+    position: fixed;
+    /* Set the navbar to fixed position */
+    top: 0;
+    /* Position the navbar at the top of the page */
+    width: 100%;
+    /* Full width */
+    display: flex;
+    justify-content: center;
+    z-index: 9999;
 }
 
 .navbar a {
-  font-weight: 250;
-  color: white;
-  padding: 14px 16px;
-  text-decoration: none;
+    font-weight: 250;
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+    margin: 0 10px;
+    transition: .3s ease;
+    position: relative;
+    overflow: hidden;
+}
+
+.navbar a::after {
+    content: "";
+    position: absolute;
+    height: 2px;
+    width: 100%;
+    bottom: 0;
+    left: -150%;
+    transition: .3s ease;
+    background-color: white;
+}
+
+.navbar a:hover {
+    color: #a4d531;
+}
+
+.navbar a:hover::after {
+    left: 0;
 }
 
 .anchor {
-  display: block;
-  position: relative;
-  top: -70px;
-  visibility: hidden;
+    display: block;
+    position: relative;
+    top: -70px;
+    visibility: hidden;
 }
 
-/*JUMBOTRON*/
-.jumbotron {
-  height: 100vh; /*height to 100% of view height*/
-  background: #a4d531; /*background color to blue*/
-  margin-bottom: 0; /*no bottom margin*/
 
-  display: flex;
-  flex-direction: column;
+/*JUMBOTRON*/
+
+.jumbotron {
+    height: 100vh;
+    /*height to 100% of view height*/
+    background: #a4d531;
+    /*background color to blue*/
+    margin-bottom: 0;
+    /*no bottom margin*/
 }
 
 .jumbotron-text {
-  /*TAGLINE UNDER NAME*/
-  font-weight: 400;
-  font-size: 2em;
-  color: white;
-  text-align: center;
-  padding-top: 150px;
+    /*TAGLINE UNDER NAME*/
+    font-weight: 400;
+    font-size: 2em;
+    color: white;
+    text-align: center;
+    padding-top: 150px;
 }
 
 .jumbotron-text h1 {
-  /*YOUR NAME*/
-  text-transform: uppercase;
-  font-weight: 800;
-  font-size: 3em;
-  margin-bottom: 0;
+    /*YOUR NAME*/
+    text-transform: uppercase;
+    font-weight: 800;
+    font-size: 3em;
+    margin-bottom: 0;
 }
 
 .jumbotron-text p {
-  margin: 0;
+    margin: 0;
 }
 
+
 /*SOCIAL LINKS*/
+
 .ul-social {
-  text-align: center;
-  padding-left: 0;
+    text-align: center;
+    padding-left: 0;
 }
 
 .li-social-links {
-  display: inline-block;
-  list-style: none;
+    display: inline-block;
+    list-style: none;
 }
 
 .social {
-  font-size: 2em;
-  color: white;
-  padding: 20px;
+    font-size: 2em;
+    color: white;
+    padding: 20px;
 }
 
+
 /*ARROW LINK*/
+
 #down-arrow {
-  /*position: absolute;
+    /*position: absolute;
   width: 100%;*/
-  margin-top: auto;
-  text-align: center;
-  margin-bottom: 50px;
+    margin-top: auto;
+    text-align: center;
+    margin-bottom: 50px;
+    position: absolute;
+    left: 50%;
+    top: 90vh;
+    animation: down-arrow 2s infinite;
+}
+
+@keyframes down-arrow {
+    0% {
+        transform: translateY(10px);
+    }
+    50% {
+        transform: translateY(-10px);
+    }
+    100% {
+        transform: translateY(10px);
+    }
 }
 
 #down-arrow a {
-  color: white;
+    color: white;
 }
 
+
 /*CONTENT*/
+
 .container {
-  /*sets up flexbox*/
-  display: flex;
-  flex-direction: column;
+    /*sets up flexbox*/
+    display: flex;
+    flex-direction: column;
 }
 
 .row {
-  display: flex;
+    display: flex;
 }
 
 .white {
-  background: white;
+    background: white;
 }
 
 .side-content {
-  flex: 0 0 16.6%;
+    flex: 0 0 16.6%;
 }
 
 .main-content {
-  flex: 0 0 66.6%;
-  margin-top: 2rem;
-  margin-bottom: 3rem;
+    flex: 0 0 66.6%;
+    margin-top: 2rem;
+    margin-bottom: 3rem;
 }
 
 .side-content-sm {
-  flex: 0 0 10%;
+    flex: 0 0 10%;
 }
 
 .main-content-lg {
-  flex: 0 0 80%;
-  margin-top: 2rem;
-  margin-bottom: 3rem;
+    flex: 0 0 80%;
+    margin-top: 2rem;
+    margin-bottom: 3rem;
 }
 
 .box-shadow {
-  -webkit-box-shadow: 0px 0px 1px 0px rgba(0,0,0,0.75);
-  -moz-box-shadow: 0px 0px 1px 0px rgba(0,0,0,0.75);
-  box-shadow: 0px 0px 1px 0px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.75);
 }
 
 h2 {
-  font-weight: 300;
-  font-size: 2.5rem;
-  color: #022002;
-  text-transform: uppercase;
-  text-align: center;
+    font-weight: 300;
+    font-size: 2.5rem;
+    color: #022002;
+    text-transform: uppercase;
+    text-align: center;
 }
 
 .content-body {
-  line-height: 1.5;
-  color: rgba(0, 0, 0, 0.849);
+    line-height: 1.5;
+    color: rgba(0, 0, 0, 0.849);
 }
 
+p a,
+.project-card a {
+    color: #a4d531;
+    text-decoration: none;
+}
+
+
 /*EDUCATION*/
+
 .card {
-  display: flex;
-  flex-direction: column;
-  background-color: white;
-  border: 1px solid rgba(0,0,0,.125);
-  border-radius: .25rem;
-  margin-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    border: 1px solid rgba(0, 0, 0, .125);
+    border-radius: .25rem;
+    margin-bottom: 30px;
 }
 
 .card-header {
-  padding: .75rem 1.25rem;
-  background-color: white;
-  border-bottom: 1px solid rgba(0,0,0,.075);
-  border-top-left-radius: .25rem;
-  border-top-right-radius: .25rem;
+    padding: .75rem 1.25rem;
+    background-color: white;
+    border-bottom: 1px solid rgba(0, 0, 0, .075);
+    border-top-left-radius: .25rem;
+    border-top-right-radius: .25rem;
 }
 
 .card-content {
-  color: grey;
-  padding: .25rem 1.25rem;
-  flex: 1 1 auto;
+    color: grey;
+    padding: .25rem 1.25rem;
+    flex: 1 1 auto;
 }
 
 h4 {
-  margin: 0;
-  font-weight: 500;
-  color: rgba(6, 27, 5, 0.452);
+    margin: 0;
+    font-weight: 500;
+    color: rgba(6, 27, 5, 0.452);
 }
 
 .job-title {
-  float: right;
+    float: right;
 }
 
+
 /*PROJECTS*/
+
 .project-card {
-  display: flex;
-  flex-direction: row;
-  background-color: white;
-  border: 1px solid rgba(0,0,0,.125);
-  border-radius: 5px;
-  margin-bottom: 30px;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.08), 0 3px 6px rgba(0,0,0,0.15);
+    display: flex;
+    flex-direction: row;
+    background-color: white;
+    border: 1px solid rgba(0, 0, 0, .125);
+    border-radius: 5px;
+    margin-bottom: 30px;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.08), 0 3px 6px rgba(0, 0, 0, 0.15);
 }
 
 .project-image {
-  flex: 1 0 auto;
+    flex: 1 0 auto;
 }
 
 .project-image img {
-  display: block;
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
+    display: block;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
 }
 
 .project-content {
-  flex: 1 1 auto;
-  padding: 1.25rem;
-
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
+    flex: 1 1 auto;
+    padding: 1.25rem;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
 
-.content-color{
-  color: grey;
+.content-color {
+    color: grey;
 }
+
 
 /*SKILLS*/
+
 .ul-skills {
-  text-align: center;
-  padding-left: 0;
+    text-align: center;
+    padding-left: 0;
 }
 
 .li-skills {
-  display: inline-block;
-  margin: 7px;
-  padding: 5px 10px;
-  color: white;
-  background: #a4d531;
-  list-style: none;
-  cursor: default;
-  font-size: 1.7em;
+    display: inline-block;
+    margin: 7px;
+    padding: 5px 10px;
+    color: white;
+    background: #a4d531;
+    list-style: none;
+    cursor: default;
+    font-size: 1.7em;
 }
 
+
 /*CONTACT*/
+
 .blue {
-  background: #a4d531;
-  text-align: center;
+    background: #a4d531;
+    text-align: center;
 }
 
 .contact {
-  max-width: 500px;
-  margin: 0 auto;
+    max-width: 500px;
+    margin: 0 auto;
 }
 
-.contact input, .contact textarea {
-  display: block;
-  width: 100%;
-  padding: 10px;
-  border-radius: 4px;
-  border: none;
-  margin-bottom: 10px;
-  background: #295505;
-  color: rgb(172, 201, 169);
-  -webkit-transition: .5s ease all;
-  transition: .5s ease all;
+.contact input,
+.contact textarea {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    border-radius: 4px;
+    border: none;
+    margin-bottom: 10px;
+    background: #295505;
+    color: rgb(172, 201, 169);
+    -webkit-transition: .5s ease all;
+    transition: .5s ease all;
 }
 
 .contact textarea {
-  height: 150px;
-  resize: none;
+    height: 150px;
+    resize: none;
 }
 
 .contact button {
-  display: block;
-  width: 100%;
-  background: #fff;
-  border-radius: 4px;
-  padding: 5px 10px;
-  border: none;
-  color: #a4d531;
-  font-weight: 1000;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  -webkit-transition: .5s ease all;
-  transition: .5s ease all;
+    display: block;
+    width: 100%;
+    background: #fff;
+    border-radius: 4px;
+    padding: 5px 10px;
+    border: none;
+    color: #a4d531;
+    font-weight: 1000;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    -webkit-transition: .5s ease all;
+    transition: .5s ease all;
 }
 
 .white-text {
-  color: white;
+    color: white;
 }
+
 
 /*Resume*/
 
 .button {
-  border: none;
-  color: white;
-  padding: 8px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 20px 6px;
-  cursor: pointer;
+    border: none;
+    color: white;
+    padding: 8px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 20px 6px;
+    cursor: pointer;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: transparent;
+    transition: .3s ease;
 }
 
-/*Image*/
-.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
+.button:hover {
+    font-size: 20px;
 }
+
+.button a {
+    text-decoration: none;
+    color: white;
+}
+
+
+/*Image*/
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
 
 /* Call to Action Button*/
 
 #fixedbutton {
-  position: fixed;
-  bottom: 50px;
-  right: 10px; 
-  color: #295505;
-  display: inline-block;
+    position: fixed;
+    bottom: 50px;
+    right: 10px;
+    color: #295505;
+    display: inline-block;
 }
