--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+* {
+  scroll-behavior: smooth;
+}
+
 body {
-  font-family: 'Carter One', sans-serif;
+  font-family: 'Poppins', sans-serif;
   background: rgba(242, 242, 242, .6);
   margin: 0;
 }
@@ -10,12 +16,18 @@ body {
 
 /*NAVBAR*/
 .navbar {
-  background-color: #295505;
+  background-color: rgba(41, 85, 5, 0.6);
   position: fixed; /* Set the navbar to fixed position */
   top: 0; /* Position the navbar at the top of the page */
   width: 100%; /* Full width */
   display: flex;
   justify-content: center;
+  font-weight: bold;
+}
+
+.navbar a:hover {
+  text-shadow: 1px 1px 2px #111;
+  font-size : 19px;
 }
 
 .navbar a {
@@ -23,6 +35,7 @@ body {
   color: white;
   padding: 14px 16px;
   text-decoration: none;
+  transition: 0.4s;
 }
 
 .anchor {
@@ -78,6 +91,38 @@ body {
   font-size: 2em;
   color: white;
   padding: 20px;
+  transition: 0.7s;
+}
+
+.social:hover {
+  color: #046e0a;
+  transition: 0.7s;
+}
+
+.bttn {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 15vh;
+
+}
+
+.bttn a {
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #fff;
+  background: #008a0a;
+  padding: 30px;
+  border-radius: 10px;
+  transition: 0.7s;
+}
+
+.bttn a:hover {
+  text-decoration: none;
+  color: #111;
+  background: #fff;
+  padding: 30px;
+  border-radius: 10px;
+  transition: 0.7s;
 }
 
 /*ARROW LINK*/
@@ -147,6 +192,11 @@ h2 {
   color: rgba(0, 0, 0, 0.849);
 }
 
+.content-body a {
+  text-decoration:none;
+  color: #00b00c;
+}
+
 /*EDUCATION*/
 .card {
   display: flex;
@@ -200,12 +250,13 @@ h4 {
   display: block;
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
+  width: 350px;
+  height: 400px;
 }
 
 .project-content {
   flex: 1 1 auto;
   padding: 1.25rem;
-
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -230,6 +281,13 @@ h4 {
   list-style: none;
   cursor: default;
   font-size: 1.7em;
+  transition: 0.7s;
+}
+
+.li-skills:hover {
+  color: #111;
+  background: #73ff7c;
+  transition: 0.7s;
 }
 
 /*CONTACT*/
